<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expenses</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_profiles">Profiles</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="title_activity_profiles">Review profiles</string>
    <string name="action_expenses">Expenses</string>
    <string name="pick_photo_intent_chooser">Select or take a new Picture</string>

    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="plate">Plate</string>
    <string name="name">Name</string>
    <string name="new_photo_desc">Profile picture</string>
    <string name="selected_profile">Selected profile</string>
    <string name="title_activity_profiles_managment">ProfilesManagmentActivity</string>
    <string name="title_activity_my_test">MyTestActivity</string>
    <string name="cancel">Cancel</string>
    <string name="fuel">Fuel</string>
    <string name="ensurance">Insurance</string>
    <string name="maintenance">Maintenance</string>
    <string name="examination">Examination</string>
    <string name="description">Description</string>
    <string name="pick_company">Your insurance company</string>
    <string name="pick_type">Your insurance type</string>

    <string-array name="insurance_companies">
        <item>Mapfre</item>
        <item>Balumba</item>
    </string-array>

</resources>
