<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_profiles" android:title="@string/action_profiles"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_selected_profile" android:title="@string/selected_profile"
        app:showAsAction="always" />
    <item android:id="@+id/action_add" android:title="@string/new_entry"
        android:orderInCategory="100" app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_input_add">
        <menu>
            <item android:id="@+id/pay_fuel"
                android:title="@string/fuel" />
            <item android:id="@+id/pay_ensurance"
                android:title="@string/ensurance" />
            <item android:id="@+id/pay_maintenance"
                android:title="@string/maintenance" />
            <item android:id="@+id/pay_examination"
                android:title="@string/examination" />
        </menu>
    </item>
</menu>
