<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.maniakalen.mycarapp.AddProfileFragment">

        <ImageView
            android:layout_width="@dimen/image_icon"
            android:layout_height="@dimen/image_icon"
            android:onClick="onSelectImageClick"
            android:src="@android:drawable/ic_menu_gallery"
            android:id="@+id/new_profile_pic"
            android:layout_marginTop="@dimen/image_icon_margin_vertical"
            android:layout_marginBottom="@dimen/image_icon_margin_vertical"
            android:layout_marginLeft="@dimen/image_icon_margin_horizontal"
            android:layout_marginRight="@dimen/image_icon_margin_horizontal"
            android:contentDescription="@string/new_photo_desc"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_profile_name"
                    android:hint="@string/name"
                    android:layout_marginRight="@dimen/edit_box_margin"
                    android:layout_marginEnd="@dimen/edit_box_margin">
                    </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="@dimen/brand_editbox_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_profile_brand"
                    android:hint="@string/brand"
                    android:layout_marginRight="@dimen/brand_editbox_margin"
                    android:layout_marginEnd="@dimen/brand_editbox_margin" />

                <EditText
                    android:layout_width="@dimen/model_editbox_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_profile_model"
                    android:hint="@string/model" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="@dimen/plate_editbox_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_profile_plate"
                    android:layout_marginRight="@dimen/plate_editbox_margin"
                    android:layout_marginEnd="@dimen/plate_editbox_margin"
                    android:hint="@string/plate"
                    />


                <Spinner
                    android:id="@+id/edit_profile_year_spin"
                    android:layout_width="@dimen/plate_editbox_width"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button android:id="@+id/add_profile"
                    android:text="@string/new_entry"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:onClick="addNewProfileEntry" />
                <Button android:id="@+id/cancel"
                    android:text="@string/cancel"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:onClick="cancelAdd" />
            </LinearLayout>
        </LinearLayout>

</LinearLayout>
